# Posicionador-Virtual-Control

./: .gitignore  control.py  control_old.py  main.py  pyproject.toml  requirements.txt
dist_old/: index.html
dist_old/css/: app.837df74b.css
dist_old/js/: app.576a82c1.js  app.576a82c1.js.map  chunk-vendors.155573b1.js  chunk-vendors.155573b1.js.map
scripts/: leer_pos_offset.py  modoPosicion.py  mover.py  writeOffset.py
