[tool.poetry]
name = "posicionador-virtual-control"
version = "1.3"
description = "Virtual interface for controlling orbit motor positioning"
authors = ["Jorge Calatayud Maeso"]
license = "MIT"
readme = "README.md"
packages = [{include = "posicionador_virtual_control"}]

[tool.poetry.dependencies]
python = "3.7.9"
PyVISA = "1.12"
pywebview = "3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
